@@ -106,7 +106,7 @@ void CScheduler::ReloadSchedules()
 	//Add Scene Timers
 	szQuery.clear();
 	szQuery.str("");
-	szQuery << "SELECT T1.SceneRowID, T1.Time, T1.Type, T1.Cmd, T1.Level, T1.Days, T2.Name, T1.UseRandomness FROM SceneTimers as T1, Scenes as T2 WHERE ((T1.Active == 1) AND (T1.Active == " << m_sql.m_ActiveTimerPlan << ") AND (T2.ID == T1.SceneRowID)) ORDER BY T1.ID";
+	szQuery << "SELECT T1.SceneRowID, T1.Time, T1.Type, T1.Cmd, T1.Level, T1.Days, T2.Name, T1.UseRandomness FROM SceneTimers as T1, Scenes as T2 WHERE ((T1.Active == 1) AND (T1.TimerPlan == " << m_sql.m_ActiveTimerPlan << ") AND (T2.ID == T1.SceneRowID)) ORDER BY T1.ID";
 	result=m_sql.query(szQuery.str());
 	if (result.size()>0)
 	{
