@@ -45,6 +45,8 @@ Version 1.0.xxxx (April xxth 2014)
 - Fixed: (to be verified) possible crash when sending emails when no internet connection was available
 - Implemented: Option in settings to choose default or holiday timer plan (maybe custom plans later)
 - Implemented: Dashboard, clicking on the 'contact' switch icon now displays the switch log
+- Implemented: Room Plan editor, hardware name infront of sensors to add
+- Fixed: Scene timers after including timerplan option
 
 Version 1.0.1680 (April 21th 2014)
 - Implemented: Support for Forecast.io
